<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/etModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/model"
            android:background="@drawable/border_edit_text"/>
        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/number"
            android:background="@drawable/border_edit_text"/>
        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:inputType="number"
            android:hint="@string/year"
            android:background="@drawable/border_edit_text"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:text="@string/add"/>
        <Button
            android:id="@+id/btnShowCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/showCar"/>
        <TextView
            android:id="@+id/Studet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:text="@string/student"/>
    </LinearLayout>

</RelativeLayout>